trying to fix centering on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ p{
 }
 /* ----------- Mobile ----------- */
 
-@media (max-width: 800px){ 
+@media (max-width: 700px){ 
   #propic_mobile{
     display: block;
     padding-top: 1em;
